Initial Quarto site4

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,8 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out repository      
+        uses: actions/checkout@v3
 
       - name: Setup Quarto
         uses: quarto-dev/quarto-actions/setup@v2
