--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,30 +1,29 @@
-name: Publish Quarto Website
-
 on:
+  workflow_dispatch:
   push:
-    branches: [main]
+    branches: main
+
+name: Quarto Publish
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-
     steps:
-      - name: Check out repository      
+      - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Setup Quarto
+      - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: 1.5.51 
-
-      - name: Render Website
-        run: quarto render
-
-       - name: Render and Publish
+          
+      - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          version: 1.5.51 
